Fixed links page y-overflow

--- a/src/components/LinksSection/LinksSection.scss
+++ b/src/components/LinksSection/LinksSection.scss
@@ -1,7 +1,7 @@
 @import "../../styles/colors.scss";
 
 .links-section {
-	height: 100vh;
+	min-height: 100vh;
 	width: 100%;
 	padding: 120px 0px;
 	position: relative;
